--- a/assets/product-page.css
+++ b/assets/product-page.css
@@ -16,7 +16,8 @@
   :root {
     /* Narrow image column and adjust padding */
     --product-column-padding: calc(6 * var(--space-unit));
-    --product-info-width: 55%;
+    /* Align info column with gallery */
+    --product-info-width: 50%;
   }
   .shopify-section:not(.product-details) {
     clear: both;
@@ -29,10 +30,6 @@
   .product-breadcrumbs + .product-main .product-media,
   .product-breadcrumbs + .product-main .product-info {
     padding-top: 0;
-  }
-  .product-breadcrumbs + .product-main .product-info::before,
-  .product-breadcrumbs + .product-main .product-info::after {
-    top: calc(-10 * var(--space-unit) - 1em - 2px);
   }
   .shopify-section + .product-main {
     margin-top: -1px;
@@ -53,7 +50,6 @@
     width: calc(100% - var(--product-info-width));
     float: left;
     clear: left;
-    border-inline-end: 1px solid rgba(var(--text-color)/0.15);
   }
     .product-main .product-media {
       margin-top: 0;
@@ -65,6 +61,11 @@
       /* Limit width so images don't overwhelm the layout */
       max-width: 620px;
     }
+    /* Sticky image gallery when there is room */
+    .product-media__inner {
+      position: sticky;
+      top: var(--header-end-padded, 48px);
+    }
   .product-main .product-info {
     position: relative;
     width: var(--product-info-width);
@@ -72,18 +73,6 @@
     padding-inline-start: var(--product-column-padding);
     float: right;
     background-color: rgba(var(--bg-color));
-  }
-  .product-main .product-info::before, .product-main .product-info::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: -2px;
-    left: -1px;
-    width: 1px;
-    background-color: rgba(var(--bg-color));
-  }
-  .product-main .product-info::after {
-    background-color: rgba(var(--text-color)/0.15);
   }
   .product-main .product-info--sticky {
     min-height: var(--sticky-height, 0);
@@ -117,19 +106,23 @@
   [dir=rtl] .product-main .product-info {
     float: left;
   }
-  [dir=rtl] .product-main .product-info::before, [dir=rtl] .product-main .product-info::after {
-    right: -1px;
-    left: auto;
+}
+@media (min-width: 1280px) {
+  :root {
+    /* Reduce extra-wide padding */
+    --product-column-padding: calc(8 * var(--space-unit));
+  }
+  .product-main .product-media,
+  .product-main .product-info {
+    padding-top: calc(10 * var(--space-unit));
   }
 }
-  @media (min-width: 1280px) {
-    :root {
-      /* Reduce extra-wide padding */
-      --product-column-padding: calc(8 * var(--space-unit));
-    }
-    .product-main .product-media,
-    .product-main .product-info {
-      padding-top: calc(10 * var(--space-unit));
-    }
+
+@media (max-width: 768.98px) {
+  /* Disable sticky behavior on small screens */
+  .product-media__inner {
+    position: static;
+    top: auto;
+  }
 }
 
