--- a/assets/product-page.css
+++ b/assets/product-page.css
@@ -14,10 +14,8 @@
 
 @media (min-width: 769px) {
   :root {
-    /* Horizontal space between image and info block */
-    --product-column-padding: 40px;
-    /* Wider info column to match arktisband layout */
-    --product-info-width: 58%;
+    --product-column-padding: calc(8 * var(--space-unit));
+    --product-info-width: 47%;
   }
   .shopify-section:not(.product-details) {
     clear: both;
@@ -30,6 +28,10 @@
   .product-breadcrumbs + .product-main .product-media,
   .product-breadcrumbs + .product-main .product-info {
     padding-top: 0;
+  }
+  .product-breadcrumbs + .product-main .product-info::before,
+  .product-breadcrumbs + .product-main .product-info::after {
+    top: calc(-10 * var(--space-unit) - 1em - 2px);
   }
   .shopify-section + .product-main {
     margin-top: -1px;
@@ -50,22 +52,15 @@
     width: calc(100% - var(--product-info-width));
     float: left;
     clear: left;
+    border-inline-end: 1px solid rgba(var(--text-color)/0.15);
   }
-    .product-main .product-media {
-      margin-top: 0;
-      margin-bottom: 0;
-      /* Tighter spacing around the gallery */
-      padding-top: calc(8 * var(--space-unit));
-      padding-bottom: calc(8 * var(--space-unit));
-      padding-inline-end: var(--product-column-padding);
-      /* Fixed maximum width for large images */
-      max-width: 640px;
-    }
-    /* Sticky image gallery when there is room */
-    .product-media__inner {
-      position: sticky;
-      top: var(--header-end-padded, 48px);
-    }
+  .product-main .product-media {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: calc(10 * var(--space-unit));
+    padding-bottom: calc(10 * var(--space-unit));
+    padding-inline-end: var(--product-column-padding);
+  }
   .product-main .product-info {
     position: relative;
     width: var(--product-info-width);
@@ -73,6 +68,18 @@
     padding-inline-start: var(--product-column-padding);
     float: right;
     background-color: rgba(var(--bg-color));
+  }
+  .product-main .product-info::before, .product-main .product-info::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: -2px;
+    left: -1px;
+    width: 1px;
+    background-color: rgba(var(--bg-color));
+  }
+  .product-main .product-info::after {
+    background-color: rgba(var(--text-color)/0.15);
   }
   .product-main .product-info--sticky {
     min-height: var(--sticky-height, 0);
@@ -106,23 +113,17 @@
   [dir=rtl] .product-main .product-info {
     float: left;
   }
+  [dir=rtl] .product-main .product-info::before, [dir=rtl] .product-main .product-info::after {
+    right: -1px;
+    left: auto;
+  }
 }
 @media (min-width: 1280px) {
   :root {
-    /* Extra space on very wide screens */
-    --product-column-padding: 60px;
+    --product-column-padding: calc(12 * var(--space-unit));
   }
   .product-main .product-media,
   .product-main .product-info {
-    padding-top: calc(10 * var(--space-unit));
+    padding-top: calc(12 * var(--space-unit));
   }
 }
-
-@media (max-width: 768.98px) {
-  /* Disable sticky behavior on small screens */
-  .product-media__inner {
-    position: static;
-    top: auto;
-  }
-}
-
