Fix thumbnail hover overflow

--- a/snippets/gallery-zoom.liquid
+++ b/snippets/gallery-zoom.liquid
@@ -45,14 +45,16 @@
                           endif
                         -%}
 
-                        {% render 'image',
-                          image: media,
-                          src_width: src_width,
-                          srcset_2x: true,
-                          lazy_load: false,
-                          class: img_class,
-                          disable_focal_point: true
-                        %}
+                        <div class="media-thumb__image-wrapper">
+                          {% render 'image',
+                            image: media,
+                            src_width: src_width,
+                            srcset_2x: true,
+                            lazy_load: false,
+                            class: img_class,
+                            disable_focal_point: true
+                          %}
+                        </div>
                       </button>
                     </li>
                   {%- endfor -%}
