--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -138,8 +138,7 @@
       sizes: sizes,
       lazy_load: lazy_load,
       class: img_class,
-      disable_focal_point: true,
-      skip_dimensions: true
+      disable_focal_point: true
     %}
 
     {%- if enable_zoom -%}
@@ -182,8 +181,7 @@
       lazy_load: lazy_load,
       class: img_class,
       alt_text: media.alt,
-      disable_focal_point: true,
-      skip_dimensions: true
+      disable_focal_point: true
     %}
   </button>
 
