--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -138,7 +138,8 @@
       sizes: sizes,
       lazy_load: lazy_load,
       class: img_class,
-      disable_focal_point: true
+      disable_focal_point: true,
+      disable_size_attributes: true
     %}
 
     {%- if enable_zoom -%}
