Revert "feat: add product info card styling"

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -120,7 +120,7 @@
       {%- endif -%}
     </div>
 
-    <div class="product-info product-info-card{% if section.settings.stick_on_scroll %} product-info--sticky{% endif %}"
+    <div class="product-info{% if section.settings.stick_on_scroll %} product-info--sticky{% endif %}"
          {% if section.settings.stick_on_scroll %}data-sticky-height-elems="#product-media,.cc-main-product + .cc-product-details .container"{% endif %}>
       {%- if section.settings.stick_on_scroll -%}
       <script src="{{ 'sticky-scroll-direction.js' | asset_url }}" defer="defer"></script>
@@ -325,7 +325,7 @@
                         {%- endif -%}
                       {%- endcapture -%}
 
-                      <button type="submit" data-add-to-cart-text="{{ add_to_cart_text | escape }}" class="btn {% if enable_dynamic_checkout %}btn--secondary{% else %}btn--primary{% endif %}" name="add"{% if product.available == false or section.settings.select_first_variant == false and product.variants.size > 1 %} disabled{% endif %}>
+                      <button type="submit" data-add-to-cart-text="{{ add_to_cart_text | escape }}" class="btn {% if enable_dynamic_checkout %}btn--secondary{% else %}btn--primary{% endif %} w-full" name="add"{% if product.available == false or section.settings.select_first_variant == false and product.variants.size > 1 %} disabled{% endif %}>
                         {% if section.settings.select_first_variant == false and product.variants.size > 1 -%}
                           {{ "products.variant.not_selected" | t }}
                         {%- elsif product.available -%}
